# Real-Time-Photon-Mapper

./: .gitignore  CMakeLists.txt  README.md  photon.sln
3ds_parser/: CMakeLists.txt  main.cpp  main.h  parse_main.cpp  parse_main.h
common/: README.md  bvh.cpp  bvh.h  common.vcxproj  cutil_math.h  geometry.cpp  geometry.h  gpuTexturesNoCuda.h  kd-tree.cpp  kd-tree.h  kdTest.cpp  obj_file_parser.cpp  obj_file_parser.h  photon.h  ply.cpp  ply.h  scene.cpp  scene.h  streamWriter.cpp  streamWriter.h  textures.h
commonTest/: commonTest.vcxproj  testMain.cpp  testScene.cpp  testStreamWriter.cpp
cuda_common/: README.md  cudaCommon.vcxproj  cudaHelpers.cu  cudaHelpers.h  gpuBvh.cu  gpuBvh.h  gpuScene.cu  gpuScene.h  gpuTextures.cu  gpuTextures.h  helpers.cu  helpers.h  kd-tree.cu  kd-tree.h  kdTest.cpp  photonTracing.cu  photonTracing.h
electron_front_end/: README.md  index.html  main.js  package-lock.json  package.json
obj_parser/: CMakeLists.txt  beau_geometry.cpp  beau_geometry.h  bvh_writer.cpp  bvh_writer.h  obj_file_parser.cpp  obj_file_parser.h  photon_builder.cpp  photon_builder.h  test.cpp  tiny_obj_loader_compiler.cpp
photon_tracing/: README.md  main.cu
stage1/: Makefile  README.md  kd-tree.h  kdTree.cpp  main.cu  photon.h  photonTracing.cu  photonTracing.h  stage1.vcxproj
stage2/: BVH.h  Camera.cpp  Camera.h  Geometry.h  GlHelp.cpp  GlHelp.h  Helpers.cpp  Renderer.cpp  Renderer.h  Transform3d.cpp  Transform3d.h  main.cpp  ply.h  tracer.frag  tracer.vert
stage2_cuda/: BVH.h  Camera.cpp  Camera.cu  Camera.h  Geometry.h  GlHelp.cu  GlHelp.h  README.md  Renderer.cpp  Renderer.cu  Renderer.h  Transform3d.cpp  Transform3d.cu  Transform3d.h  bvh.cu  cudaHelpers.cu  cudaRenderer.cu  cudaRenderer.h  cutil_math.h  geometry.cu  gpuBvh.cu  gpuBvh.h  helper_math.h  main.cpp  main.cu  ply.cpp  ply.h  scene.h  sdlHelpers.cpp  sdlHelpers.h  stage2_cuda.vcxproj
stage2_cuda/blah/: BVH.cu  ply.cu
stage2_cuda_old/: BVH.cpp  BVH.h  Geometry.cpp  Geometry.h  Helpers.cpp  Renderer.cpp  Renderer.h  bvh2.h  cudaRenderer.cu  cudaRenderer.h  ply.cpp
stage2_cuda_old/blah/: Camera.cu  Geometry.cu  Geometry.h  GlHelp.cu  Renderer.cu  Renderer.h  Transform3d.h  main.cu
